--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,40 @@
-{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
+</head>
+<body>
+	{% load static %}
+	
+	<h1>Contato</h1>
+	
+	<form action="POST" id="contact-form" style="display: flex; flex-direction: column; width: 400px;">
+		{% csrf_token %}
+		<label for="input-name">Nome</label>
+		<input type="text" name="name" id="input-name" required>
+	
+		<label for="input-mail">Email</label>
+		<input type="email" name="mail" id="input-mail" required>
+	
+		<label for="input-subect">Assunto</label>
+		<input type="text" name="subect" id="input-subect" required>
+	
+		<label for="input-message">Mensagem</label>
+		<input type="textarea" name="message" id="input-message" required>
+	
+		<input type="submit" value="enviar">
+	</form>
 
-<h1>Contato</h1>
+	<script
+		src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+		crossorigin="anonymous">
+	</script>
+	<script type="text/javascript" src="{% static 'main.js' %}"></script>
+</body>
+</html>
 
-<form action="POST" style="display: flex; flex-direction: column; width: 400px;">
-	<label for="input-name">Nome</label>
-	<input type="text" name="name" id="input-name" required>
 
-	<label for="input-mail">Email</label>
-	<input type="email" name="mail" id="input-mail" required>
-
-	<label for="input-subect">Assunto</label>
-	<input type="text" name="subect" id="input-subect" required>
-
-	<label for="input-message">Mensagem</label>
-	<input type="textarea" name="message" id="input-message" required>
-
-	<input type="submit" value="enviar">
-</form>
