--- a/templates/home.html
+++ b/templates/home.html
@@ -19,8 +19,8 @@
 		<label for="input-mail">Email</label>
 		<input type="email" name="mail" id="input-mail" required>
 	
-		<label for="input-subect">Assunto</label>
-		<input type="text" name="subect" id="input-subect" required>
+		<label for="input-subject">Assunto</label>
+		<input type="text" name="subject" id="input-subject" required>
 	
 		<label for="input-message">Mensagem</label>
 		<input type="textarea" name="message" id="input-message" required>
